2002-09-21  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Add define-record-type.

2002-08-22  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (expander):  Change type to Object.
	(getExpander):  Remove unused method.
	(expand):  Handle expander as evaluated Procedure, or
	an re-written S-expression.  If latter, re-write it.
	* kawa/standard/define_syntax.java (scanForDefinitions):  Set expander.
	(rewrite):  Re-write expander if it has been re-written yet.

2002-08-16  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Always look for known
	functions, even if immediate.

2002-08-10  Jim White  <jim@pagesmiths.com>

	* build.xml:  Patch to compile HTTP.scm.

2002-08-04  Per Bothner  <per@bothner.com>

	* kawa/standard/{string_ci_equal_p.java, string_ci_greaterequal_p.java,
	string_ci_greaterthan_p.java, string_ci_lessequal_p.java,
	string_ci_lessthan_p.java, string_greaterequal_p.java,
	string_greaterthan_p.java, string_lessequal_p.java,
	string_lessthan_p.java}:  Removed - noew use kawa.lib.strings.
	* kawa/standard/Makefile.am:  Update accordingly.
	* kawa/standard/vector_append.java (vectorAppend):  New static field.
	(<init>):  New constructor
	* kawa/standard/Scheme.java (initScheme):  Update accordingly.

2002-08-02  Per Bothner  <per@bothner.com>

	* kawa/standard/expt.java (expt):  New static methods.
	(expt)  New static final field.
	* kawa/standard/Scheme.java (initScheme):  Use define_field for "expt".

2002-07-29  Per Bothner  <per@bothner.com>

	* kawa/standard/prim_throw.java (primitiveThrow):  New static field.
	* kawa/standard/Scheme.java (initScheme):  Define "primitive-throw"
	using define_field, so it can be inlined.

2002-07-28  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (getNamedType):  Define <never-returns>.

2002-07-25  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair):  Remove some optimizations,