@@ -1,5 +1,8 @@
 2002-09-21  Per Bothner  <per@bothner.com>
 
+	* kawa/lang/Lambda.java (rewrite, rewriteBody):  Use 'matches'
+	method of Translator to match against '::'.
+
 	* kawa/standard/Scheme.java (initScheme):  Add define-record-type.
 
 2002-08-22  Per Bothner  <per@bothner.com>
